data/derived/comb/progs/unify/prog5088.ml.out
Characters 65-77:
  (pow+ 1, bigAdd total + (mulByDigit x l2)@listZeros pow) in
           ^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int
